--- a/gemfiles/rails3.2/Gemfile
+++ b/gemfiles/rails3.2/Gemfile
@@ -5,4 +5,4 @@ gem 'actionpack', version
 gem 'activesupport', version
 
 # Specify your gem's dependencies in actionview-link_to_blank.gemspec
-gemspec path: '..'
+gemspec path: File.join('..', '..')
