--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ rvm:
 gemfile:
  - gemfiles/rails3_2.gemfile
  - gemfiles/rails4_0.gemfile
+ - gemfiles/rails_master.gemfile
 branches:
   only:
     - master
