--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,10 @@ rvm:
  - 1.9.3
  - 2.0.0
 gemfile:
- - gemfiles/rails3_2.gemfile
- - gemfiles/rails4_0.gemfile
+ - gemfiles/rails_3_2.gemfile
+ - gemfiles/rails_3_2_stable.gemfile
+ - gemfiles/rails_4_0.gemfile
+ - gemfiles/rails_4_0_stable.gemfile
  - gemfiles/rails_master.gemfile
 branches:
   only:
