--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: ruby
 rvm:
  - 1.9.3
  - 2.0.0
+ - 2.1.0-preview1
 gemfile:
  - gemfiles/rails_3_2.gemfile
  - gemfiles/rails_3_2_stable.gemfile
