--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ gemfile:
  - gemfiles/rails_3_2_stable.gemfile
  - gemfiles/rails_4_0.gemfile
  - gemfiles/rails_4_0_stable.gemfile
+ - gemfiles/rails_4_1.gemfile
+ - gemfiles/rails_4_1_stable.gemfile
  - gemfiles/rails_master.gemfile
 branches:
   only:
