--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: ruby
+sudo: false
 rvm:
- - 2.0.0
- - 2.1.2
+  - 2.0.0
+  - 2.1.8
+  - 2.2.4
+  - 2.3.0
 before_install:
   - gem update bundler
 gemfile:
