chore(test): update generated files

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,8 @@ before_install:
   - gem update bundler
 gemfile:
  - gemfiles/rails_3_2.gemfile
- - gemfiles/rails_3_2_stable.gemfile
  - gemfiles/rails_4_0.gemfile
- - gemfiles/rails_4_0_stable.gemfile
  - gemfiles/rails_4_1.gemfile
- - gemfiles/rails_4_1_stable.gemfile
+ - gemfiles/rails_4_2.gemfile
+ - gemfiles/rails_5_0.gemfile
  - gemfiles/rails_master.gemfile
