--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,13 @@ gemfile:
  - gemfiles/rails_4_2.gemfile
  - gemfiles/rails_5_0.gemfile
  - gemfiles/rails_master.gemfile
+matrix:
+  exclude:
+  - rvm: 2.0.0
+    gemfile: gemfiles/rails_5_0.gemfile
+  - rvm: 2.0.0
+    gemfile: gemfiles/rails_master.gemfile
+  - rvm: 2.1.8
+    gemfile: gemfiles/rails_5_0.gemfile
+  - rvm: 2.1.8
+    gemfile: gemfiles/rails_master.gemfile
