--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,9 @@ matrix:
     gemfile: gemfiles/rails_5_0.gemfile
   - rvm: 2.1.10
     gemfile: gemfiles/rails_master.gemfile
+  - rvm: 2.4.0
+    gemfile: gemfiles/rails_4_0.gemfile
+  - rvm: 2.4.0
+    gemfile: gemfiles/rails_4_1.gemfile
+  - rvm: 2.4.0
+    gemfile: gemfiles/rails_4_2.gemfile
